bk_ida/gccida/c1/gen_reload
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7813:46: error: must use 'enum' tag to refer to type 'reload_type'
rtx  gen_reload( rtx out, rtx in, int opnum, reload_type type) 
                                             ^
                                             enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7816:4: error: expected ';' after expression
rtx last_insn; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7816:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7820:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7820:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7823:4: error: expected ';' after expression
rtx v15; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7823:5: error: use of undeclared identifier 'v15'
rtx v15; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7827:4: error: expected ';' after expression
rtx v19; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7827:5: error: use of undeclared identifier 'v19'
rtx v19; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7830:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v22; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7831:4: error: expected ';' after expression
rtx secondary_mem; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7831:5: error: use of undeclared identifier 'secondary_mem'; did you mean 'get_secondary_mem'?
rtx secondary_mem; // r14 
    ^~~~~~~~~~~~~
    get_secondary_mem
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload.h:260:12: note: 'get_secondary_mem' declared here
extern rtx get_secondary_mem PARAMS ((rtx, enum machine_mode,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7832:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7833:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7840:4: error: expected ';' after expression
rtx v32; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7840:5: error: use of undeclared identifier 'v32'
rtx v32; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7842:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v35; // [rsp+8h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7847:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/reload1.c:7851:34: error: use of undeclared identifier 'machine_mode'
&& ( v10 = gen_lowpart_common( ( machine_mode)v9, out)) != 0LL ) 
                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_reload/src/obj/reload1.o] Error 1
